Creating a Jigsaw edition of the example